--- a/Entregable1/U4T1_rfg.html
+++ b/Entregable1/U4T1_rfg.html
@@ -31,13 +31,13 @@
                 </select><br>
             </p>
             <p>
-                <label for="password">Contraseña:</label>
-                <input type="password" id="password" name="password"><br>
+                <label for="contraseña">Contraseña:</label>
+                <input type="password" id="contraseña" name="contraseña"><br>
             </p>
         </form>
     </fieldset>
     <br>
-    <input type="reset" value="Resetear">
+    <input type="reset" value="Resetear" id="resetear">
     <input type="submit" value="Enviar" id="enviar">
     <br>
     <br>
